--- a/app/views/openchain/block/_tabs.html.erb
+++ b/app/views/openchain/block/_tabs.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'shared/tabs', locals: {
-    tabs: ['show','transactions','transfers',
-    # 'calls','contracts'
+    tabs: ['show','transactions',
+    # 'transfers','calls','contracts'
     ]
 } %>
