--- a/app/views/openchain/network/_tabs.html.erb
+++ b/app/views/openchain/network/_tabs.html.erb
@@ -3,10 +3,10 @@
         'blocks',
         'transactions',
         # 'transfers',
-        # 'tokens',
+        'tokens',
         # 'calls',
         # 'trades',
-        'contracts'
+        # 'contracts'
         # 'smart_contract'
     ]
 } %>
