--- a/app/views/openchain/block/_transactions_table.html.erb
+++ b/app/views/openchain/block/_transactions_table.html.erb
@@ -9,13 +9,10 @@
             <table class="table table-striped table-hover table-sm widgets-table ">
                 <thead>
                   <tr>
-                    <th class=""><%= t('widgets.titles.timestamp') %></th>
                     <th class=""><%= t('widgets.titles.hash') %></th>
-                    <th class="">Status</th>
                     <th class=""><%= t('widgets.titles.tx_sender') %></th>
                     <th class=""><%= t('widgets.titles.receiver') %></th>
-                    <th class=""><%= t('widgets.titles.amount') %></th>
-                    <th class="text-right"><%= t('widgets.titles.fee') %></th>
+                    <th class="text-right" style="width: 110px;"><%= t('widgets.titles.fee') %></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -31,25 +28,25 @@
 
 <script>
   var currentPage = 1;
+  var queryPage = 'tokens?type=JSON';
   function loadDataTable() {
-    queryCseScan('transactions', `filters.method=NORMAL&filters.blockHashOrHeight=<%= @height %>&pagination.page=${currentPage}&pagination.limit=5`)
+    queryBlockScout('blocks/<%= @height %>/transactions?type=JSON')
     .then(function(data) {
       $('#table-data').show();
       console.log('query data', data);
       tableBody = $("table tbody");
-      data.listings.forEach(function(item) {
+      data.raw.forEach(function(item) {
         tableBody.append(`<tr>
-          <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
           <td class="ellipsis"><span><a href="/openchain/tx/${item.hash}">${item.hash}</a></span></td>
-          <td class=""><span>${item.status}</span></td>
           <td class="ellipsis"><span><a href="/openchain/address/${item.from}">${item.from}</a></span></td>
           <td class="ellipsis"><span><a href="/openchain/address/${item.to}">${item.to}</a></span></td>
-          <td class="text-right "><span>${formatNumber(Number(item.amount)/Math.pow(10, 8))}</span></td>
-          <td class="text-right "><span>${formatNumber(Number(item.feeNetwork)/Math.pow(10, 8))}</span></td>
+          <td class="text-right "><span>${formatNumber(Number(item.gas_used)/Math.pow(10, 8))}</span></td>
         </tr>`)
       });
       toogleLoading(false);
-      if (Number(data.pagination.pages) <= Number(data.pagination.page)) {
+      if (data.next_page_path) {
+        queryPage = data.next_page_path + '&type=JSON';
+      } else {
         $('.more-text').hide();
       }
     })
