--- a/app/views/openchain/token/_holder_table.html.erb
+++ b/app/views/openchain/token/_holder_table.html.erb
@@ -1,12 +1,11 @@
 <div class="row">
   <div class="col-12 col-lg-12 mb-4">
     <div class="card">
-      <div class="card-header"><%= t('widgets.headers.transfers') %></div>
       <div class="card-body">
         <div class="text-center widgets-loading" id="loading"><div role="status" class="spinner-border text-info"><span class="sr-only"><%= t('loading') %></span></div></div>
         <div class="widgets-blur" id="container-data">
           <div class="table-responsive" id="table-data" style="display: none;">
-            <table class="table table-striped table-hover table-sm widgets-table ">
+            <table class="table table-striped table-hover table-sm widgets-table" style="border-top: none;">
                 <thead>
                   <tr>
                     <th class=""><%= t('widgets.titles.address') %></th>
@@ -26,29 +25,40 @@
 
 <script>
   var currentPage = 1;
+  const address = '<%= @token %>';
+  const formatedAddress = web3.utils.toChecksumAddress(address);
+  var queryPage = `tokens/${formatedAddress}/token-holders?type=JSON`;
 
   function loadDataTable() {
-    queryCseScan('wallets', `wallets=<%= @token %>&pagination.page=${currentPage}&pagination.limit=10`)
+    queryBlockScout(queryPage)
+    // queryCseScan('wallets', `wallets=<%= @token %>&pagination.page=${currentPage}&pagination.limit=10`)
     .then(function(data) {
       $('#table-data').show();
       console.log('query data', data);
       tableBody = $("table tbody");
-      data.listings.forEach(function(item) {
+      data.raw.forEach(function(item) {
         tableBody.append(`<tr>
           <td class="ellipsis"><span><a href="/openchain/address/${item.address}">${item.address}</a></span></td>
-          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.free)/Math.pow(10, item.decimals)))}</span></td>
+          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.value)/Math.pow(10, Number(item.decimals))))} (${getPercent(item.value, item.total)}%)</span></td>
         </tr>`)
       });
       toogleLoading(false);
-      if (Number(data.pagination.pages) <= Number(data.pagination.page)) {
+      if (data.next_page_path) {
+        queryPage = data.next_page_path + '&type=JSON';
+      } else {
         $('.more-text').hide();
       }
     })
-    .catch(function() {
+    .catch(function(err) {
+      console.log('err', err);
       toogleLoading(false);
       $('#table-data').html('No data');
       $('.more-text').hide();
     });
+  }
+
+  function getPercent(from, total) {
+    return Math.floor((Number(from)/Number(total)) * 100 * 10000) / 10000;
   }
 
     $( document ).ready(function() {
