--- a/app/views/openchain/token/_transfers_table.html.erb
+++ b/app/views/openchain/token/_transfers_table.html.erb
@@ -10,8 +10,8 @@
                 <thead>
                   <tr>
                     <th class=""><%= t('widgets.titles.timestamp') %></th>
+                    <th class=""><%= t('widgets.titles.block') %></th>
                     <th class=""><%= t('widgets.titles.hash') %></th>
-                    <th class="">Status</th>
                     <th class=""><%= t('widgets.titles.tx_sender') %></th>
                     <th class=""><%= t('widgets.titles.receiver') %></th>
                     <th class="text-right"><%= t('widgets.titles.amount') %></th>
@@ -30,31 +30,37 @@
 </div>
 
 <script>
+  const address = '<%= @token %>';
+  const formatedAddress = web3.utils.toChecksumAddress(address);
   var currentPage = 1;
+  var queryPage = `tokens/${formatedAddress}/token-transfers?type=JSON`;
 
   function loadDataTable() {
-    queryCseScan('transactions', `filters.method=INITIAL_TOKEN&filters.method=TRANSFER_TOKEN&filters.tokenAddress=<%= @token %>&pagination.page=${currentPage}&pagination.limit=10`)
+    queryBlockScout(queryPage)
     .then(function(data) {
       $('#table-data').show();
       console.log('query data', data);
       tableBody = $("table tbody");
-      data.listings.forEach(function(item) {
+      data.raw.forEach(function(item) {
         tableBody.append(`<tr>
-          <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
-          <td class="ellipsis"><span><a href="/openchain/tx/${item.hash}">${item.hash}</a></span></td>
-          <td class=""><span>${item.status}</span></td>
-          <td class="ellipsis"><span><a href="/openchain/address/${item.from}">${item.from}</a></span></td>
-          <td class="ellipsis"><span><a href="/openchain/address/${item.data.payload.to}">${item.data.payload.to}</a></span></td>
-          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.data.payload.amount)/Math.pow(10, item.token.decimals)))} ${item.token.symbol}</span></td>
-          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.data.payload.feeToken)/Math.pow(10, item.token.decimals)))} ${item.token.symbol}</span></td>
+          <td class="" style="width: 180px;"><span>${m(item.timestamp).format('YYYY-MM-DD HH:mm:ss')}</span></td>
+          <td class="" style="width: 100px;"><span><a href="/openchain/block/${item.block_number}">#${item.block_number}</a></span></td>
+          <td class="ellipsis"><span><a href="/openchain/tx/${item.transaction_hash}">${item.transaction_hash}</a></span></td>
+          <td class="ellipsis"><span><a href="/openchain/address/${item.from_address}">${item.from_address}</a></span></td>
+          <td class="ellipsis"><span><a href="/openchain/address/${item.to_address}">${item.to_address}</a></span></td>
+          <td class="text-right " style="width: 160px;"><span>${numberWithCommas(formatNumber(Number(item.amount)/Math.pow(10, Number(item.token.decimals))))} ${item.token.symbol}</span></td>
+          <td class="text-right " style="width: 100px;"><span>${numberWithCommas(formatNumber(Number(item.gas_used)/Math.pow(10, 8)))}</span></td>
         </tr>`)
       });
       toogleLoading(false);
-      if (Number(data.pagination.pages) <= Number(data.pagination.page)) {
-        $('.more-text').hide();
-      }
+        if (data.next_page_path) {
+          queryPage = data.next_page_path + '&type=JSON';
+        } else {
+          $('.more-text').hide();
+        }
     })
-    .catch(function() {
+    .catch(function(err) {
+      console.log('err', err);
       toogleLoading(false);
       $('#table-data').html('No data');
       $('.more-text').hide();
