--- a/app/views/openchain/token/show.html.erb
+++ b/app/views/openchain/token/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<%# <div class="row"> %>
   <%= render partial: 'openchain/token/token_attributes' %>
-  <%= render partial: 'openchain/token/token_statistics' %>
-</div>
+  <%# <%= render partial: 'openchain/token/token_statistics' %>
+<%# </div> %>
