--- a/app/views/openchain/tx/_transfers.html.erb
+++ b/app/views/openchain/tx/_transfers.html.erb
@@ -3,7 +3,25 @@
     <div class="card">
       <div class="card-header"><%= t('widgets.headers.tx_transfers') %></div>
       <div class="card-body">
-        <div id="tx_transfers"><%= t('loading') %></div>
+        <div class="text-center widgets-loading" id="loading"><div role="status" class="spinner-border text-info"><span class="sr-only"><%= t('loading') %></span></div></div>
+        <div class="widgets-blur" id="container-data">
+          <div class="table-responsive" id="table-data" style="display: none;">
+            <table class="table table-striped table-hover table-sm widgets-table ">
+                <thead>
+                  <tr>
+                    <th class=""><%= t('widgets.titles.sender') %></th>
+                    <th class=""></th>
+                    <th class=""><%= t('widgets.titles.receiver') %></th>
+                    <th class="text-right"><%= t('widgets.titles.amount') %></th>
+                    <th class=""><%= t('widgets.titles.currency') %></th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <div class="more-text"><div class="more-text-link"><a class="more-link" id="more-link">Show more...</a></div></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -11,83 +29,121 @@
 
 <script>
 
+  var queryPage = '/tx/<%= @hash %>/token-transfers?type=JSON';
+
+    function loadDataTable() {
+      queryBlockScout(queryPage)
+      .then(function(data) {
+        $('#table-data').show();
+        console.log('[query tranfers queryBlockScout]', data);
+        tableBody = $("table tbody");
+        data.raw.forEach(function(item) {
+          tableBody.append(`<tr>
+            <td class="ellipsis"><span><a href="/openchain/address/${item.from_address}">${item.from_address}</a></span></td>
+            <td class="text-center"><span><i class="fa fa-sign-in text-success"></i></span></td>
+            <td class="ellipsis"><span><a href="/openchain/address/${item.to_address}">${item.to_address}</a></span></td>
+            <td class="text-right" style="width: 110px;"><span>${formatNumber(Number(item.amount) / Math.pow(10, Number(item.token.decimals)))}</span></td>
+            <td class=""><span><a href="/openchain/token/${item.token.contract_address_hash}">${item.token.symbol} (${item.token.name})</a></span></td>
+          </tr>`)
+        });
+        toogleLoading(false);
+        if (data.next_page_path) {
+          queryPage = data.next_page_path + '&type=JSON';
+        } else {
+          $('.more-text').hide();
+        }
+      })
+      .catch(function(error) {
+        console.log('[query data queryBlockScout] error', error);
+        toogleLoading(false);
+        $('#table-data').html('No data');
+        $('.more-text').hide();
+      });
+    };
+
     $( document ).ready(function() {
+      $('#more-link').on('click', function() {
+        toogleLoading(true);
+        currentPage++;
+        loadDataTable();
+      });
 
-        var query = new widgets.query(`query (
-                                  $hash: String!,
-                                  $limit: Int!,
-                                  $offset: Int!){
-                              tron{
-                                transfers(options:{
-                                  limit: $limit, offset: $offset},
-                                  amount: {gt: 0},
-                                  txHash:{is: $hash}) {
-
-
-                                  sender {
-                                    address
-                                    annotation
-                                  }
-
-                                  receiver {
-                                    address
-                                    annotation
-                                  }
-
-                                  amount
-
-                                  currency {
-                                    symbol
-                                    address
-                                    tokenId
-                                    tokenType
-                                  }
+      loadDataTable();
+        // var query = new widgets.query(`query (
+        //                           $hash: String!,
+        //                           $limit: Int!,
+        //                           $offset: Int!){
+        //                       tron{
+        //                         transfers(options:{
+        //                           limit: $limit, offset: $offset},
+        //                           amount: {gt: 0},
+        //                           txHash:{is: $hash}) {
 
 
-                                }
-                              }
-                            }`);
+        //                           sender {
+        //                             address
+        //                             annotation
+        //                           }
 
-        new widgets.table('#tx_transfers', query, 'tron.transfers', {
-            title: '<%= t('widgets.headers.tx_transfers') %>',
-            dataOptions: [
+        //                           receiver {
+        //                             address
+        //                             annotation
+        //                           }
 
-                {
-                    title: '<%= t('widgets.titles.sender') %>',
-                    type: 'string-ellipsis',
-                    path: ['sender.annotation','sender.address'],
-                    urlCallbackName: 'sender_address_path'
-                },
-                {
-                    title: '',
-                    type: 'string',
-                    data: '<i class="fa fa-sign-in text-success"></i>',
-                    html_class: 'text-center'
-                },
-                {
-                    title: '<%= t('widgets.titles.receiver') %>',
-                    type: 'string-ellipsis',
-                    path: ['receiver.annotation','receiver.address'],
-                    urlCallbackName: 'receiver_address_path'
-                },
-                {
-                    title: '<%= t('widgets.titles.amount') %>',
-                    type: 'amount',
-                    path: 'amount'
-                },
-                {
-                    title: '<%= t('widgets.titles.currency') %>',
-                    type: 'string',
-                    path: 'currency.symbol',
-                    urlCallbackName: 'token_path'
-                }
-            ]
-        });
+        //                           amount
 
-        query.request({
+        //                           currency {
+        //                             symbol
+        //                             address
+        //                             tokenId
+        //                             tokenType
+        //                           }
 
-            hash: '<%= @hash %>'
-        });
+
+        //                         }
+        //                       }
+        //                     }`);
+
+        // new widgets.table('#tx_transfers', query, 'tron.transfers', {
+        //     title: '<%= t('widgets.headers.tx_transfers') %>',
+        //     dataOptions: [
+
+        //         {
+        //             title: '<%= t('widgets.titles.sender') %>',
+        //             type: 'string-ellipsis',
+        //             path: ['sender.annotation','sender.address'],
+        //             urlCallbackName: 'sender_address_path'
+        //         },
+        //         {
+        //             title: '',
+        //             type: 'string',
+        //             data: '<i class="fa fa-sign-in text-success"></i>',
+        //             html_class: 'text-center'
+        //         },
+        //         {
+        //             title: '<%= t('widgets.titles.receiver') %>',
+        //             type: 'string-ellipsis',
+        //             path: ['receiver.annotation','receiver.address'],
+        //             urlCallbackName: 'receiver_address_path'
+        //         },
+        //         {
+        //             title: '<%= t('widgets.titles.amount') %>',
+        //             type: 'amount',
+        //             path: 'amount'
+        //         },
+        //         {
+        //             title: '<%= t('widgets.titles.currency') %>',
+        //             type: 'string',
+        //             path: 'currency.symbol',
+        //             urlCallbackName: 'token_path'
+        //         }
+        //     ]
+        // });
+
+        // query.request({
+
+        //     hash: '<%= @hash %>'
+        // });
 
 
     });
