--- a/app/views/shared/_image_links_meta.html.erb
+++ b/app/views/shared/_image_links_meta.html.erb
@@ -1,21 +1,21 @@
 <!-- Meta -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="og:site_name" content="Openchain Explorer" />
-<meta property="vk:image" content="<%= external_image('bitquery_logo_w.png') %>" />
-<meta property="twitter:image" content="<%= external_image('bitquery_logo_w.png') %>" />
-<meta property="og:image" content="<%= external_image('bitquery_logo_w.png') %>" />
-<meta property="og:image:width" content="314" />
-<meta property="og:image:height" content="384" />
+<meta property="vk:image" content="https://openchain.info/openchain_logo.png" />
+<meta property="twitter:image" content="https://openchain.info/openchain_logo.png" />
+<meta property="og:image" content="https://openchain.info/openchain_logo.png" />
+<meta property="og:image:width" content="761" />
+<meta property="og:image:height" content="156" />
 <meta property="og:title" content="<%= content_for?(:title) ? yield(:title) : 'Openchain Blockchain Explorer' %>" />
 <meta property="og:type" content="article" />
 <meta property="og:description" content="<%= content_for?(:description) ? yield(:description) : 'Openchain is analytical engine for blockchains' %>" />
 <meta property="og:url" content="<%= request.original_url %>" />
 
-<link rel="image_src" href="<%= external_image('bitquery_logo_w.png') %>">
+<link rel="image_src" href="/openchain_logo.png">
 <meta name="twitter:card" content="summary_large_image" />
 
-<link rel="apple-touch-icon" href="<%= external_image('favicon_180x180.png') %>">
-<meta name="msapplication-tile-image" content="<%= external_image('favicon_150x150.png') %>">
+<link rel="apple-touch-icon" href="/openchain.png">
+<meta name="msapplication-tile-image" content="/openchain.png">
 
 <!-- Chrome, Firefox OS and Opera -->
 <meta name="theme-color" content="#12263f">
